# emulator

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build_and_test.yml  clang-format.yml
cli_app/: CMakeLists.txt  cli_app_utils.c  cli_app_utils.h  commands.c  commands.h  debugger.c  debugger.h  main.c
scripts/: format.sh  test.sh
src/: CMakeLists.txt  cJSON.c  cJSON.h  config.c  config.h  emulator.c  emulator.h
tests/: CMakeLists.txt  alu_test.c  base_test.c  jump_test.c  move_test.c  other_test.c  stack_test.c  test1.c
